[package]
name = "kvs"
version = "0.1.0"
authors = ["Taylor Fraley <taylor.o.fraley@protonmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
